Update Jenkinsfile to execute e2e tests for unprivileged version (#27)
* Update Jenkinsfile to execute e2e tests for unprivileged version

Execute them in parallel in two different clusters. We have decided two
use two different clusters with two different k8s versions because at
this moment we don't have a mechanism to test against all the k8s
versions in a dynamic way.

Note: The `fsi-jenkins-112-rbac` cluster doesn't exist yet.

* Rename cluster and add a different cluster domain

New clusters aren't created in `aws.datanerd.us` domain anymore.

* Fix cluster name value

* Execute E2E tests for unprivileged version in the existing cluster

We don't have the new cluster yet and we would like to avoid being
blocked. The build will take more time to pass but we will address that
in the future.

* Update E2E tests and chart templates

For the unprivileged version we need different values in our daemonset.
To test this properly in our E2E tests, we need to update the helm chart
template to be able to differenciate between the unprivileged version
and the normal one.

* Fix string format

* Pass unprivileged arg to the E2E tests

* Fix cli arg for unprivileged mode

--- a/e2e/charts/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
+++ b/e2e/charts/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
@@ -35,12 +35,26 @@ spec:
           imagePullPolicy: Always
           resources:
 {{ toYaml .Values.daemonset.resources | indent 12 }}
+          {{- if .Values.daemonset.unprivileged }}
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+          {{- end }}
           volumeMounts:
+            {{- if .Values.daemonset.unprivileged }}
+            - mountPath: /var/db/newrelic-infra/data
+              name: tmpfs-data
+            - mountPath: /var/db/newrelic-infra/user_data
+              name: tmpfs-user-data
+            - mountPath: /tmp
+              name: tmpfs-tmp
+            {{- else }}
             - mountPath: /host
               name: host-volume
               readOnly: true
             - mountPath: /var/run/docker.sock
               name: host-docker-socket
+            {{- end }}
           env:
             - name: "CLUSTER_NAME"
               value: {{ .Values.integration.k8sClusterName | quote }}
@@ -60,6 +74,10 @@ spec:
             - name: "KUBE_STATE_METRICS_URL" # If this value is specified then discovery process for kube-state-metrics endpoint won't be triggered.
               value: {{ .Values.integration.ksm.url | quote}} # This is example value. Only HTTP request is accepted.
             {{- end }}
+            {{- if .Values.daemonset.unprivileged }}
+            - name: "DISCOVERY_CACHE_DIR"
+              value: "/tmp/nr-kuberentes"
+            {{- end }}
             - name: "NRIA_DISPLAY_NAME"
               valueFrom:
                 fieldRef:
@@ -71,14 +89,23 @@ spec:
                   apiVersion: "v1"
                   fieldPath: "spec.nodeName"
             - name: "NRIA_PASSTHROUGH_ENVIRONMENT"
-              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME,CADVISOR_PORT,NRK8S_NODE_NAME,KUBE_STATE_METRICS_URL"
+              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME,CADVISOR_PORT,NRK8S_NODE_NAME,KUBE_STATE_METRICS_URL,DISCOVERY_CACHE_DIR"
       volumes:
+        {{- if .Values.daemonset.unprivileged }}
+        - name: tmpfs-data
+          emptyDir: {}
+        - name: tmpfs-user-data
+          emptyDir: {}
+        - name: tmpfs-tmp
+          emptyDir: {}
+        {{- else }}
         - name: host-volume
           hostPath:
             path: /
         - name: host-docker-socket
           hostPath:
             path: /var/run/docker.sock
+        {{- end }}
       {{- if semverCompare ">=1.6.0" .Capabilities.KubeVersion.GitVersion }}
       tolerations:
         - operator: "Exists"
