--- a/e2e/charts/newrelic-infrastructure-k8s-e2e/values.yaml
+++ b/e2e/charts/newrelic-infrastructure-k8s-e2e/values.yaml
@@ -1,6 +1,7 @@
 daemonset:
   name: newrelic-infra
   namespace: default
+  unprivileged: false
   image:
     repository: newrelic/infrastructure-k8s
     tag: 1.0.0
