--- a/deploy/newrelic-infra-unprivileged.yaml
+++ b/deploy/newrelic-infra-unprivileged.yaml
@@ -69,6 +69,7 @@ spec:
               cpu: 100m
               memory: 30M
           securityContext:
+            runAsUser: 1000 # nri-agent
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
           volumeMounts:
