Update the infrastructure agent image version + privileged bugfix (#48)
* Update the infrastructure agent image version

* Run the infrastructure agent within a privileged container

* Update changelog

--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -62,6 +62,8 @@ spec:
       containers:
         - name: newrelic-infra
           image: newrelic/infrastructure-k8s:1.9.4
+          securityContext:
+            privileged: true
           resources:
             limits:
               memory: 150M
