FSI-1179: refactor the role-based-switch in nri-kubernetes (#55)
* refactor leader election logic to a job based one
* will now log which jobs are running
* Changed error newlines to comma separated list
* enabled local debugging of nri-kubernetes with kubernetes static
* add readme for kubernetes static

--- a/.papers_config.yml
+++ b/.papers_config.yml
@@ -42,6 +42,7 @@ reject:
   - Artistic-2.0
 
 exceptions:
+  - "github.com/newrelic/nri-kubernetes/src/apiserver"
   - "github.com/newrelic/nri-kubernetes/src/storage"
   - "github.com/newrelic/nri-kubernetes/src/config"
   - "github.com/newrelic/nri-kubernetes/src/data"
