--- a/papers_manifest.yml
+++ b/papers_manifest.yml
@@ -27,6 +27,10 @@ golang:
     license: Unknown
     license_url: github.com/newrelic/nri-kubernetes/LICENSE
     project_url: github.com/newrelic/nri-kubernetes/e2e/timer
+  github.com/newrelic/nri-kubernetes/src/apiserver:
+    license: Unknown
+    license_url: github.com/newrelic/nri-kubernetes/LICENSE
+    project_url: github.com/newrelic/nri-kubernetes/src/apiserver
   github.com/newrelic/nri-kubernetes/src/client:
     license: Unknown
     license_url: github.com/newrelic/nri-kubernetes/LICENSE
@@ -203,6 +207,10 @@ golang:
     license: Apache-2.0
     license_url: github.com/newrelic/nri-kubernetes/vendor/github.com/prometheus/common/LICENSE
     project_url: github.com/newrelic/nri-kubernetes/vendor/github.com/prometheus/common/model
+  github.com/newrelic/nri-kubernetes/vendor/github.com/prometheus/prom2json:
+    license: Apache-2.0
+    license_url: github.com/newrelic/nri-kubernetes/vendor/github.com/prometheus/prom2json/LICENSE
+    project_url: github.com/newrelic/nri-kubernetes/vendor/github.com/prometheus/prom2json
   github.com/newrelic/nri-kubernetes/vendor/github.com/sirupsen/logrus:
     license: MIT
     license_url: github.com/newrelic/nri-kubernetes/vendor/github.com/sirupsen/logrus/LICENSE
