--- a/e2e/charts/newrelic-infrastructure-k8s-e2e/values.yaml
+++ b/e2e/charts/newrelic-infrastructure-k8s-e2e/values.yaml
@@ -48,6 +48,7 @@ ksm-instance-one:
     replicasets: true
     pods: true
 
+    certificatesigningrequests: false
     nodes: false
     replicationcontrollers: false
     resourcequotas: false
@@ -61,6 +62,9 @@ ksm-instance-one:
     persistentvolumes: false
     services: false
     statefulsets: false
+    configmaps: false
+    ingresses: false
+    poddisruptionbudgets: false
 
 ksm-instance-two:
   rbac:
@@ -73,6 +77,7 @@ ksm-instance-two:
     replicasets: true
     pods: true
 
+    certificatesigningrequests: false
     nodes: false
     replicationcontrollers: false
     resourcequotas: false
@@ -86,6 +91,9 @@ ksm-instance-two:
     persistentvolumes: false
     services: false
     statefulsets: false
+    configmaps: false
+    ingresses: false
+    poddisruptionbudgets: false
 
 alpine-pending-scheduled:
   pod:
