add daemonset+statefulset samples (#76)
* add daemonset+statefulset samples

add missing metrics

add E2E test files

* small typo

* force jenkins rebuild

* add test statefulset to E2E tests

* fix e2e tests

* detect helm3 usage

* remove DS_Store

* Update changelog

--- a/e2e/charts/newrelic-infrastructure-k8s-e2e/requirements.yaml
+++ b/e2e/charts/newrelic-infrastructure-k8s-e2e/requirements.yaml
@@ -1,29 +1,34 @@
 dependencies:
-  - name: kube-state-metrics
-    version: "1.3.0"
-    repository: "@stable"
-    alias: ksm-instance-one
-    tags:
-      - one-ksm-instance
-      - two-ksm-instances
+- name: kube-state-metrics
+  version: "1.3.0"
+  repository: "@stable"
+  alias: ksm-instance-one
+  tags:
+    - one-ksm-instance
+    - two-ksm-instances
 
-  - name: kube-state-metrics
-    version: "1.3.0"
-    repository: "@stable"
-    alias: ksm-instance-two
-    tags:
-      - two-ksm-instances
+- name: kube-state-metrics
+  version: "1.3.0"
+  repository: "@stable"
+  alias: ksm-instance-two
+  tags:
+    - two-ksm-instances
 
-  - name: alpine-pending
-    version: "1.0.0"
-    repository: "file://../alpine-pending"
-    alias: alpine-pending-scheduled
-    tags:
-      - with-pending-pods
+- name: alpine-pending
+  version: "1.0.0"
+  repository: "file://../alpine-pending"
+  alias: alpine-pending-scheduled
+  tags:
+    - with-pending-pods
 
-  - name: alpine-pending
-    version: "1.0.0"
-    repository: "file://../alpine-pending"
-    alias: alpine-pending-non-scheduled
-    tags:
-      - with-pending-pods
+- name: alpine-pending
+  version: "1.0.0"
+  repository: "file://../alpine-pending"
+  alias: alpine-pending-non-scheduled
+  tags:
+    - with-pending-pods
+
+- name: test-statefulset
+  version: "1.0.0"
+  repository: "file://../test-statefulset"
+  alias: test-statefulset
