Updated agent base image to v1.8.32-bundle (#83)
* Unprivileged using bundle container with configmap mounted as volume
* Privileged using bundle container with configmap mounted as volume
* Renamed binary to nri-kubernetes.
* Updated config to V4
* Updated agent to 1.8.32
* Updated CHANGELOG.md with more information about the bundle container

Co-authored-by: Carlos <carlos@cliche-corp.co.uk>
Co-authored-by: jorikvdwerf <jorikvdwerf@gmail.com>

--- a/Dockerfile-e2e
+++ b/Dockerfile-e2e
@@ -13,8 +13,8 @@ RUN apk add --update ca-certificates \
  && rm /var/cache/apk/* \
  && rm -f /helm-${HELM_LATEST_VERSION}-linux-amd64.tar.gz
 
-COPY ./bin/nr-kubernetes-e2e nr-kubernetes-e2e
+COPY ./bin/nri-kubernetes-e2e nri-kubernetes-e2e
 COPY e2e/schema e2e/schema
 COPY e2e/charts e2e/charts
 
-ENTRYPOINT ["/var/db/newrelic-infra/fsi/nr-kubernetes-e2e"]
+ENTRYPOINT ["/var/db/newrelic-infra/fsi/nri-kubernetes-e2e"]
