Fixing issue where bad YAML causes the agent to hang (#84)

--- a/nri-kubernetes-config.yml.sample
+++ b/nri-kubernetes-config.yml.sample
@@ -1,7 +1,6 @@
-integrations:
-  - name: nri-kubernetes
-    interval: 15s
-#    arguments:
-#      arg1: <ARG_VALUE>
-#    labels:
-#      key1: <LABEL_VALUE>
+---
+integration_name: com.newrelic.kubernetes	
+
+instances:	
+  - name: nri-kubernetes	
+    command: metrics
