--- a/deploy/newrelic-infra-unprivileged.yaml
+++ b/deploy/newrelic-infra-unprivileged.yaml
@@ -103,6 +103,14 @@ spec:
            #   value: "4194"
            # - name: "KUBE_STATE_METRICS_URL" # If this value is specified then discovery process for kube-state-metrics endpoint won't be triggered.
            #   value: "http://172.17.0.3:8080" # This is example value. Only HTTP request is accepted.
+           # - name: "SCHEDULER_ENDPOINT_URL"
+           #   value: "https://localhost:10259"
+           # - name: "ETCD_ENDPOINT_URL"
+           #  value: "https://localhost:9979"
+           # - name: "CONTROLLER_MANAGER_ENDPOINT_URL"
+           #   value: "https://localhost:10257"
+           # - name: "API_SERVER_ENDPOINT_URL"
+           #   value: "https://localhost:6443"
             - name: "NRIA_DISPLAY_NAME"
               valueFrom:
                 fieldRef:
@@ -113,12 +121,13 @@ spec:
                 fieldRef:
                   apiVersion: "v1"
                   fieldPath: "spec.nodeName"
-            - name: "NRIA_CUSTOM_ATTRIBUTES"
-              value: '{"clusterName":"$(CLUSTER_NAME)"}'
+            # Note: Usage of API_SERVER_SECURE_PORT has been deprecated in favor of API_SERVER_ENDPOINT_URL.
             # - name: API_SERVER_SECURE_PORT
             #   value: "6443"
+            - name: "NRIA_CUSTOM_ATTRIBUTES"
+              value: '{"clusterName":"$(CLUSTER_NAME)"}'
             - name: "NRIA_PASSTHROUGH_ENVIRONMENT"
-              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME,CADVISOR_PORT,NRK8S_NODE_NAME,KUBE_STATE_METRICS_URL,KUBE_STATE_METRICS_POD_LABEL,API_SERVER_SECURE_PORT,KUBE_STATE_METRICS_SCHEME,KUBE_STATE_METRICS_PORT"
+              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME,CADVISOR_PORT,NRK8S_NODE_NAME,KUBE_STATE_METRICS_URL,KUBE_STATE_METRICS_POD_LABEL,API_SERVER_SECURE_PORT,KUBE_STATE_METRICS_SCHEME,KUBE_STATE_METRICS_PORT,SCHEDULER_ENDPOINT_URL,ETCD_ENDPOINT_URL,CONTROLLER_MANAGER_ENDPOINT_URL,API_SERVER_ENDPOINT_URL"
       volumes:
         - name: tmpfs-data
           emptyDir: {}
