--- a/deploy/newrelic-infra-linux-windows.yaml
+++ b/deploy/newrelic-infra-linux-windows.yaml
@@ -174,7 +174,7 @@ spec:
         kubernetes.io/os: windows
       containers:
         - name: newrelic-infra
-          image: newrelic/infrastructure-k8s:1.16.0-windows-1809
+          image: "newrelic/infrastructure-k8s:1.16.0-windows-<WINDOWS_VERSION>-beta"
           resources:
             limits:
               memory: 300M
