feat(e2e): initial Prototype

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ feat/movePipelines ]
 jobs:
-  security:
+  e2eTests:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Code
