--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -19,6 +19,8 @@ jobs:
       run: |
         curl https://get.helm.sh/helm-v2.17.0-linux-amd64.tar.gz --output helm.tar.gz
         tar -zxvf helm.tar.gz
+        sudo apt-get update -y
+        sudo apt-get install -y socat
     - name: Setup Minikube
       uses: manusa/actions-setup-minikube@v2.0.1
       with:
