--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -5,6 +5,9 @@ on:
     branches: [ feat/movePipelines ]
   pull_request:
     branches: [ feat/movePipelines ]
+strategy:
+  matrix:
+    priviledgeMode: [ "normal", "unprivileged" ]
 jobs:
   e2eTests:
     runs-on: ubuntu-latest
@@ -15,16 +18,27 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '^1.14.4'
-    - name: Setup Helm
+    - name: Setup Helm and Socat
       run: |
         curl https://get.helm.sh/helm-v2.17.0-linux-amd64.tar.gz --output helm.tar.gz
         tar -zxvf helm.tar.gz
         sudo apt-get update -y
         sudo apt-get install -y socat
+    - name: Build Image
+      run: |
+        docker build -t test_image_{{ matrix.priviledgeMode }}:test .
     - name: Setup Minikube
       uses: manusa/actions-setup-minikube@v2.0.1
       with:
         minikube version: 'v1.14.2'
         kubernetes version: 'v1.19.2'
     - name: Interact with the cluster
-      run: CLUSTER_NAME=e2e NR_LICENSE_KEY=fakeLicense  go run e2e/cmd/e2e.go --verbose --rbac=true --integration_image_tag=1.26.6
+      run: |
+      if [ "{{ matrix.priviledgeMode }}" = "unprivileged" ]
+      then
+        UNPRIVILEDGE=true
+      else
+        UNPRIVILEDGE=false
+      fi
+      eval $(minikube docker-env)
+      go run e2e/cmd/e2e.go --verbose --cluster_name=e2e nr_license_key="fakeLicense" --rbac=true --integration_image_tag=test --integration_image_repository=test_image_{{ matrix.priviledgeMode }} --integration_image_repository= --unprivileged=$UNPRIVILEDGE
