--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -42,4 +42,4 @@ jobs:
           UNPRIVILEDGE=false
         fi
         eval $(minikube docker-env)
-        go run e2e/cmd/e2e.go --verbose --cluster_name=e2e nr_license_key="fakeLicense" --rbac=true --integration_image_tag=test --integration_image_repository=test_image_${{ matrix.priviledgeMode }} --integration_image_repository= --unprivileged=$UNPRIVILEDGE
+        go run e2e/cmd/e2e.go --verbose --cluster_name=e2e --nr_license_key="fakeLicense" --rbac=true --integration_image_tag=test --integration_image_repository=test_image_${{ matrix.priviledgeMode }} --integration_image_repository= --unprivileged=$UNPRIVILEDGE
