--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -11,7 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        ## we could run priviledgeMode this in serie instead of in //
+        ## PRO less total time, less expensive CONTRA slower to get results
         priviledgeMode: [ "normal", "unprivileged" ]
+        k8sVersion: [ "v1.15.7", "v1.16.7", "v1.17.9", "v1.18.6", "v1.19.2" ]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2.3.4
@@ -29,12 +32,13 @@ jobs:
       uses: manusa/actions-setup-minikube@v2.0.1
       with:
         minikube version: 'v1.14.2'
-        kubernetes version: 'v1.19.2'
+        kubernetes version: '${{ matrix.k8sVersion }}'
     - name: Compile and Build Image
       run: |
         make compile
         eval $(minikube docker-env)
         docker build -t test_image_${{ matrix.priviledgeMode }}:test .
+        docker  run --rm -i test_image_${{ matrix.priviledgeMode }}:test whoami
     - name: Interact with the cluster
       run: |
         if [ "${{ matrix.priviledgeMode }}" = "unprivileged" ]; then
