Add node selector for linux OS
When deploying the hybrid linux/windows manifest into a hybrind cluster,
the linux Daemonset was scheduling the containers into the Windows
nodes, which cannot run the container.

--- a/deploy/newrelic-infrastructure-k8s-linux-windows1809-beta.yaml
+++ b/deploy/newrelic-infrastructure-k8s-linux-windows1809-beta.yaml
@@ -62,6 +62,8 @@ spec:
       serviceAccountName: newrelic
       hostNetwork: true # This option is a requirement for the Infrastructure Agent to report the proper hostname in New Relic.
       dnsPolicy: ClusterFirstWithHostNet
+      nodeSelector:
+        kubernetes.io/os: linux
       containers:
         - name: newrelic-infra
           image: newrelic/infrastructure-k8s:1.16.0
